--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <!-- Your right background image goes here -->
     </div>
     <div class="content">
-        <h1 class="title">Myumee & Sanjid's Nikkah Ceremony</h1>
-        <h2 class="section">December 18th, 2023</h2>
+        <h1 class="title">Myumee & Sanjid's</h1>
+        <h2 class="title">Nikkah Ceremony</h2>
+        <h3 class="section">December 18th, 2023</h3>
         <!-- <h3 class="date">September 15th, 2024</h3> -->
         <div id="countdown"></div>
-        <p class="info">Hope to see you all there &#x1F470; &#x1F338; &#x1F935;</p>
+        <p class="info">Hope to see you all there</p>
         <!-- <a class="btn" href="https://docs.google.com/forms/d/1AYBTfGY2kSYAFaLuSwy4I1Z9rI8qasmXEqQur7Q7zHg/edit" target="_blank">RSVP</a> -->
     </div>
 
