--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Wedding</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="background-image left-image">
-        <!-- Your left background image goes here -->
-    </div>
-    <div class="background-image center-image">
-        <!-- Your center background image goes here -->
-    </div>
-    <div class="background-image right-image">
-        <!-- Your right background image goes here -->
-    </div>
-    <div class="content">
-        <h1 class="title">Myumee & Sanjid's</h1>
-        <h2 class="title">Nikkah Ceremony</h2>
-        <h3 class="section">December 18th, 2023</h3>
-        <!-- <h3 class="date">September 15th, 2024</h3> -->
-        <div id="countdown"></div>
-        <p class="info">Hope to see you all there</p>
-        <!-- <a class="btn" href="https://docs.google.com/forms/d/1AYBTfGY2kSYAFaLuSwy4I1Z9rI8qasmXEqQur7Q7zHg/edit" target="_blank">RSVP</a> -->
-    </div>
 
-    <script src="wedsite.js"></script>
+<script>
+    function checkScreenSize() {
+        var screenWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+
+        // Define the maximum screen size for a typical smartphone
+        var maxMobileSize = 768; // Adjust this value based on your requirements
+
+        if (screenWidth > maxMobileSize) {
+            document.styleSheets[0].insertRule(`
+                @font-face {
+                    font-family: 'Fortune';
+                    src: url('Fortune.otf') format('opentype');
+                }
+            `, 0);
+        } else {
+            // Insert your alternative code here if the screen size is smaller than the specified maximum
+            // For example: document.styleSheets[0].insertRule(`body { font-family: 'FallbackFont', sans-serif; }`, 0);
+        }
+    }
+
+    window.onload = checkScreenSize;
+</script>
+
+<div class="background-image left-image">
+    <!-- Your left background image goes here -->
+</div>
+<div class="background-image center-image">
+    <!-- Your center background image goes here -->
+</div>
+<div class="background-image right-image">
+    <!-- Your right background image goes here -->
+</div>
+<div class="content">
+    <h1 class="title">Myumee & Sanjid's</h1>
+    <h2 class="title">Nikkah Ceremony</h2>
+    <h3 class="section">December 18th, 2023</h3>
+    <!-- <h3 class="date">September 15th, 2024</h3> -->
+    <div id="countdown"></div>
+    <p class="info">Hope to see you all there</p>
+    <!-- <a class="btn" href="https://docs.google.com/forms/d/1AYBTfGY2kSYAFaLuSwy4I1Z9rI8qasmXEqQur7Q7zHg/edit" target="_blank">RSVP</a> -->
+</div>
+
+<script src="wedsite.js"></script>
 </body>
 </html>
